<resources>
    <string name="app_name">IMC</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Volver a Calcular</string>
    <string name="result">El resultado es:</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Bajo Peso</string>

    <string name="title_peso_normal">Peso Normal</string>
    <string name="description_peso_normal">Peso Normal</string>

    <string name="title_sobrepeso">Sobrepeso"</string>
    <string name="description_sobrepeso">Sobrepeso</string>

    <string name="title_obesidad">Obesidad"</string>
    <string name="description_obesidad">Obesidad</string>


</resources>